--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </script>
     <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML">
     </script>
+    <link rel="stylesheet" href="css/styles.css">
 
 
   <title>EXERCISES</title>
