--- a/index.html
+++ b/index.html
@@ -324,14 +324,14 @@ $P(Y{{\,=\,}}true | x_1,x_2)$ for each example?</p></li>
 
     </div>
 </section>
-  <form method="POST" action="https://api.staticman.net/v2/entry/KaustabhGanguly/aima-website-4/gh-pages/">
+  <form method="POST" action="https://api.staticman.net/v2/entry/KaustabhGanguly/aima-website-4/gh-pages/comments">
   <!-- e.g. "2016-01-02-this-is-a-post" -->
   <input name="options[slug]" type="hidden" value="{{ page.slug }}">
   <label><input name="fields[name]" type="text">Name</label>
   <label><input name="fields[email]" type="email">E-mail</label>
   <label><textarea name="fields[message]"></textarea>Message</label>
   
-  <button type="submit">Go!</button>
+  <button type="submit">Comment</button>
 </form>
 
             
