--- a/index.html
+++ b/index.html
@@ -321,18 +321,21 @@ $P(Y{{\,=\,}}true | x_1,x_2)$ for each example?</p></li>
     <div class="content">
         <p>Q. In Section 4.4.1 we introduced belief states to solve sensorless search problems. A sequence of actions solves a sensorless problem if it maps every physical state in the initial belief state <i>b</i> to a goal state. Suppose the agent knows h*(s), the true optimal cost of solving the physical state <i>s</i> in the fully observable problem, for every state <i>s</i> in <i>b</i>. Find an admissible heuristic <i>h(b)</i> for the sensorless problem in terms of these costs, and prove its admissibilty. Comment on the accuracy of this heuristic on the sensorless vacuum problem of : <img src="https://image.ibb.co/gvmzFn/Screen_Shot_2018_02_18_at_4_29_31_PM.png" alt="down" />How well does : $$A^∗$$ perform?
  (id=4.4 section=4.4.1)</p>
+      
 
     </div>
 </section>
+  <section>
   <form method="POST" action="https://api.staticman.net/v2/entry/KaustabhGanguly/aima-website-4/gh-pages/comments">
   <!-- e.g. "2016-01-02-this-is-a-post" -->
   <input name="options[slug]" type="hidden" value="{{ page.slug }}">
-  <label><input name="fields[name]" type="text">Name</label>
-  <label><input name="fields[email]" type="email">E-mail</label>
+  <label><input name="fields[name]" type="text">Name</label><br />
+  <label><input name="fields[email]" type="email">E-mail</label><br />
   <label><textarea name="fields[message]"></textarea>Message</label>
   
   <button type="submit">Comment</button>
 </form>
+  </section>
 
             
 
