--- a/index.html
+++ b/index.html
@@ -325,15 +325,15 @@ $P(Y{{\,=\,}}true | x_1,x_2)$ for each example?</p></li>
 
     </div>
 </section>
-  <section>
-  <form method="POST" action="https://api.staticman.net/v2/entry/KaustabhGanguly/aima-website-4/gh-pages/comments">
+  <section style="padding: 10px; margin: 10px ;">
+  <form style ="margin:10px; font-family: Monaco; font-weight: bold; "method="POST" action="https://api.staticman.net/v2/entry/KaustabhGanguly/aima-website-4/gh-pages/comments">
   <!-- e.g. "2016-01-02-this-is-a-post" -->
   <input name="options[slug]" type="hidden" value="{{ page.slug }}">
-  <label><input name="fields[name]" type="text">Name</label><br />
-  <label><input name="fields[email]" type="email">E-mail</label><br />
-  <label><textarea name="fields[message]"></textarea>Message</label>
+  <label style="margin-bottom:10px;"><input name="fields[name]" type="text">Name</label><br />
+  <label style="margin-bottom:10px;"><input name="fields[email]" type="email">E-mail</label><br />
+  <label style="margin-bottom:10px;"><textarea name="fields[message]"></textarea>Message</label>
   
-  <button type="submit">Comment</button>
+  <button style="background-color:#d3d3d3;"type="submit">Comment</button>
 </form>
   </section>
 
