--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ $P(Y{{\,=\,}}true | x_1,x_2)$ for each example?</p></li>
   <section style="padding: 10px; margin: 10px ;">
   <form style ="margin:10px; font-family: Monaco; font-weight: bold; "method="POST" action="https://api.staticman.net/v2/entry/KaustabhGanguly/aima-website-4/gh-pages/comments">
   <!-- e.g. "2016-01-02-this-is-a-post" -->
-  <input name="options[slug]" type="hidden" value="{{ page.slug }}">
+  <input name="options[slug]" type="hidden" value="Comments">
   <label style="margin-bottom:10px;"><input name="fields[name]" type="text">Name</label><br />
   <label style="margin-bottom:10px;"><input name="fields[email]" type="email">E-mail</label><br />
   <label style="margin-bottom:10px;"><textarea name="fields[message]"></textarea>Message</label>
