--- a/index.html
+++ b/index.html
@@ -325,17 +325,36 @@ $P(Y{{\,=\,}}true | x_1,x_2)$ for each example?</p></li>
 
     </div>
 </section>
-  <section style="padding: 10px; margin: 10px ;">
+  
+  <style>
+    .form{
+      padding: 4vw;
+      text-align:center;
+      content-align:center;
+      font-family: Arial Black;
+      color: #111;
+      margin:auto ;
+    }
+    .label{
+     margin:auto;
+      text-align:center;
+      display:block;
+      padding: 2vw;
+      margin-bottom:5px;
+    }
+  </style>
+  <div class = "form">
   <form style ="margin:10px; font-family: Monaco; font-weight: bold; "method="POST" action="https://api.staticman.net/v2/entry/KaustabhGanguly/aima-website-4/gh-pages/comments">
   <!-- e.g. "2016-01-02-this-is-a-post" -->
   <input name="options[slug]" type="hidden" value="Comments">
-  <label style="margin-bottom:10px;"><input name="fields[name]" type="text">Name</label><br />
-  <label style="margin-bottom:10px;"><input name="fields[email]" type="email">E-mail</label><br />
-  <label style="margin-bottom:10px;"><textarea name="fields[message]"></textarea>Message</label>
+    <h1>COMMENTS :</h1>
+    <p style="color:#d3d3d3;"> All the comments are on the github repo's _public folder </p>
+  <label class ="label"><input name="fields[name]" type="text">::Name</label><br />
+  <label class ="label"><textarea name="fields[message]"></textarea>::Message</label>
   
-  <button style="background-color:#d3d3d3;"type="submit">Comment</button>
+  <button style="background-color:skyblue;border-radius:20%;"type="submit">Comment</button>
 </form>
-  </section>
+  </div>
 
             
 
