--- a/index.html
+++ b/index.html
@@ -342,6 +342,12 @@ $P(Y{{\,=\,}}true | x_1,x_2)$ for each example?</p></li>
       padding: 2vw;
       margin-bottom:5px;
     }
+    .mini{
+     margin:auto;
+     padding: 20px;
+     border: 2px solid #111111;
+     
+    }
   </style>
   <div class = "form">
   <form style ="margin:10px; font-family: Monaco; font-weight: bold; "method="POST" action="https://api.staticman.net/v2/entry/KaustabhGanguly/aima-website-4/gh-pages/comments">
@@ -349,9 +355,10 @@ $P(Y{{\,=\,}}true | x_1,x_2)$ for each example?</p></li>
   <input name="options[slug]" type="hidden" value="Comments">
     <h1>COMMENTS :</h1>
     <p style="color:#d3d3d3;"> All the comments are on the github repo's _public folder </p>
-  <label class ="label"><input name="fields[name]" type="text">::Name</label><br />
-  <label class ="label"><textarea name="fields[message]"></textarea>::Message</label>
-  
+    <div class="mini">
+  <label class ="label"><input name="fields[name]" type="text">Name</label><br />
+  <label class ="label"><textarea name="fields[message]"></textarea>Message</label>
+    </div>
   <button style="background-color:skyblue;border-radius:20%;"type="submit">Comment</button>
 </form>
   </div>
