--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ $P(Y{{\,=\,}}true | x_1,x_2)$ for each example?</p></li>
   <label class ="label"><input name="fields[name]" type="text">Name</label><br />
   <label class ="label"><textarea name="fields[message]"></textarea>Message</label>
     </div>
-  <button style="background-color:skyblue;border-radius:20%;"type="submit">Comment</button>
+  <button style="background-color:skyblue;border-radius:20%;height:20px;font-size:8px;" type="submit">Comment</button>
 </form>
   </div>
 
