--- a/index.html
+++ b/index.html
@@ -352,9 +352,11 @@ $P(Y{{\,=\,}}true | x_1,x_2)$ for each example?</p></li>
   <div class = "form">
   <form style ="margin:10px; font-family: Monaco; font-weight: bold; "method="POST" action="https://api.staticman.net/v2/entry/KaustabhGanguly/aima-website-4/gh-pages/comments">
   <!-- e.g. "2016-01-02-this-is-a-post" -->
+    <input name="options[redirect]" type="hidden" value="https://kaustabhganguly.github.io/aima-website-4">
+
   <input name="options[slug]" type="hidden" value="Comments">
     <h1>COMMENTS :</h1>
-    <p style="color:#d3d3d3;"> All the comments are on the github repo's _public folder </p>
+    <p style="color:#d3d3d3;"> All the comments are on the gh-pages branch's _public folder </p>
     <div class="mini">
   <label class ="label"><input name="fields[name]" type="text">Name</label><br />
   <label class ="label"><textarea name="fields[message]"></textarea>Message</label>
