--- a/index.html
+++ b/index.html
@@ -358,10 +358,8 @@ $P(Y{{\,=\,}}true | x_1,x_2)$ for each example?</p></li>
     <h1>COMMENTS :</h1>
     <p style="color:#d3d3d3;"> All the comments are on the gh-pages branch's _public folder </p>
     <div class="mini">
-      <p> NAME </p>
-  <label class ="label"><input name="fields[name]" type="text"></label><br />
-      <p> COMMENT </p>
-  <label class ="label"><textarea name="fields[message]"></textarea></label>
+  <label class ="label"><input name="fields[name]" type="text" placeholder = "NAME"></label><br />
+  <label class ="label"><textarea name="fields[message]" placeholder = "COMMENT"></textarea></label>
     </div>
   <button style="background-color:skyblue;border-radius:20%;height:20px;font-size:8px;" type="submit">Comment</button>
 </form>
