--- a/index.html
+++ b/index.html
@@ -189,14 +189,14 @@
         <a href="#characters">Questions</a>
     </h1>
     <div class="content">
-        <p>This page reflects the features of this site:
-- We can create Mathjax integrated posts.
-- We can create code samples.
-- <strong>Markdown Supported</strong>
-- Can insert Code Snippet .
-- Can add disqus comment bar at the end .
-- Full templated blog style with minimalistic css
-- Full support and extensive documentation from Hugo</p>
+        <p>This page reflects the features of this site:<br />
+- We can create Mathjax integrated posts.<br />
+- We can create code samples.<br />
+- <strong>Markdown Supported</strong><br />
+- Can insert Code Snippet .<br />
+- Comment bar at the end .<br />
+- Full templated blog style with minimalistic css<br />
+- Full support and extensive documentation from Hugo</p><br />
 
 <p>Following are the examples of what kind of posts we can make .</p>
 
